User registration created And Shopping Category Page updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ShoppingActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.RegisterUserActivity"></activity>
+        <activity android:name=".registerUser" />
+        <activity android:name=".activity.ShoppingActivity" />
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
